--- a/RARI/RARI/Pages/LoginPage.xaml
+++ b/RARI/RARI/Pages/LoginPage.xaml
@@ -25,7 +25,7 @@
                         Text="{Binding Username}"
                         MaxLength="20"
                         ClearButtonVisibility="WhileEditing"
-                        Placeholder="Login" />
+                        Placeholder="Mail" />
             </Frame>
 
 
