--- a/RARI/RARI/Pages/RegPage1.xaml
+++ b/RARI/RARI/Pages/RegPage1.xaml
@@ -18,7 +18,7 @@
                 <Entry 
                         x:Name="RegLogin"
                         ClearButtonVisibility="WhileEditing"
-                        Placeholder="Введите логин"
+                        Placeholder="Введите Вашу почту"
                         MaxLength="100"/>
             </Frame>
 
